feat: remove link in footer powered by message

--- a/public/index.html
+++ b/public/index.html
@@ -352,7 +352,7 @@ const gitRepoInfo = htmlWebpackPlugin.options.gitRepoInfo;
     </div>
     <div id="error-footer">
       <code>
-        Powered by <a href="https://ng.syzoj.org" target="_blank" rel="noreferrer noopener">SYZOJ NG</a><br>
+        Powered by SYZOJ NG<br>
         (version <%= gitRepoInfo.abbreviatedSha %>)
       </code>
     </div>
