--- a/public/index.html
+++ b/public/index.html
@@ -392,7 +392,7 @@ const gitRepoInfo = htmlWebpackPlugin.options.gitRepoInfo;
         // Load xdomain library from API host.
         var apiHostCorsPath = apiEndpoint + "api/cors/";
         var xdomainScriptTag = addScriptTag(apiHostCorsPath + "xdomain.min.js");
-        xdomainScriptTag.setAttribute("data-slave", apiHostCorsPath);
+        xdomainScriptTag.setAttribute("data-slave", apiHostCorsPath + "xdomain.html");
         xdomainScriptTag.onload = loadApplication;
         scriptsToWaitBeforeLoadingApplication++;
       }
