--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@ const gitRepoInfo = htmlWebpackPlugin.options.gitRepoInfo;
       try {
         title = __default_title__;
       } catch (e) {
-        title = "SYZOJ";
+        title = "Lyrio";
       }
       document.title = title;
 
@@ -342,7 +342,7 @@ const gitRepoInfo = htmlWebpackPlugin.options.gitRepoInfo;
     </div>
     <div id="error-footer">
       <code>
-        Powered by SYZOJ NG<br>
+        Powered by Lyrio<br>
         (version <%= gitRepoInfo.abbreviatedSha %>)
       </code>
     </div>
